# clamav-gui

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: arm-publish.yml  publish.yml
docs/: CONTRIBUTING.md
src/: App.css  App.tsx  main.tsx  routes.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/i18n/: en.json  hy.json  ru.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  sysinfo.rs
src-tauri/src/antivirus/: bulk_actions.rs  clamd.rs  history.rs  mod.rs  quarantine.rs  scan.rs  stats.rs  update.rs
src-tauri/src/clamav/: bulk_actions.rs  history.rs  mod.rs  quarantine.rs  scan.rs  update.rs
src-tauri/src/helpers/: flags.rs  history.rs  i18n.rs  log.rs  matcher.rs  mod.rs  path.rs  quarantine.rs  real_time.rs  scan.rs  scan_types.rs  scheduler.rs  stats.rs  sys_tray.rs
src-tauri/src/helpers/scheduler/: mod.rs  windows.rs
src-tauri/src/system/: logs.rs  mod.rs  scheduler.rs  sysinfo.rs
src-tauri/src/types/: enums.rs  structs.rs
src/@types/: i18next.d.ts
src/components/: app-icon.tsx  command-snippet.tsx  credits.tsx  layout.tsx  log.tsx  logo.tsx  main-sidebar.tsx  popup.tsx  settings-item.tsx
src/contents/: history.tsx  log.tsx  overview.tsx  quarantine.tsx  scan-menu.tsx  scheduler.tsx  stats.tsx  update.tsx
src/context/: real-time.tsx  settings.tsx  startup-scan.tsx  themes.tsx
src/hooks/: use-clamd.ts  (+6 more)
(+201 files in other folders)
