[package]
name = "clamav-gui"
version = "0.3.0-1"
description = "A GUI for ClamAV Antivirus that makes the Antivirus itself look professional and work exactly like ClamAV (A Freeware CLI Antivirus)"
authors = ["ArsenTech"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "clamav_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.37.2"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
specta-typescript = "0.0.9"
specta = "=2.0.0-rc.22"
tauri-plugin-os = "2"
once_cell = "1.19"
walkdir = "2"
tauri-plugin-dialog = "2"
chrono = "0.4.43"
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
uuid = {version = "1.19.0", features = ["v4"] }
